--- a/po/it.po
+++ b/po/it.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.24\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-10-18 09:23+0200\n"
-"PO-Revision-Date: 2005-09-29 20:32+0900\n"
-"Last-Translator: Luca Marrocco <buildup@libero.it>\n"
+"PO-Revision-Date: 2005-10-20 12:50+0100\n"
+"Last-Translator: Alex Dupre <ale@FreeBSD.org>\n"
 "Language-Team: GUFI <traduzioni@gufi.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,87 +22,95 @@ msgid "An item was unexpectedly removed: \"%s\"."
 msgstr ""
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:581
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "Rimuovi"
+msgstr "Elimino \"%s\"?"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:586 ../panel/panel-app.c:558
-#: ../panel/panel-app.c:583 ../panel/panel-app.c:610
-#: ../panel/panel-settings.c:1237 ../plugins/launcher/launcher.c:313
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:586
+#: ../panel/panel-app.c:558
+#: ../panel/panel-app.c:583
+#: ../panel/panel-app.c:610
+#: ../panel/panel-settings.c:1237
+#: ../plugins/launcher/launcher.c:313
 #: ../plugins/launcher/launcher.c:361
 msgid "Xfce Panel"
 msgstr "Pannello Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:588
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:761
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:811 ../panel/panel.c:550
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:811
+#: ../panel/panel.c:550
 #: ../plugins/launcher/launcher-dialog.c:1263
-#: ../plugins/separator/separator.c:241 ../plugins/actions/actions.c:295
-#: ../plugins/tasklist/tasklist.c:320 ../plugins/pager/pager.c:275
-#: ../plugins/systray/systray.c:345 ../plugins/iconbox/iconbox.c:748
+#: ../plugins/separator/separator.c:241
+#: ../plugins/actions/actions.c:295
+#: ../plugins/tasklist/tasklist.c:320
+#: ../plugins/pager/pager.c:275
+#: ../plugins/systray/systray.c:345
+#: ../plugins/iconbox/iconbox.c:748
 #: ../plugins/clock/clock.c:401
 msgid "Properties"
-msgstr ""
+msgstr "Proprietà"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:768
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:819 ../panel/panel.c:557
-#, fuzzy
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:819
+#: ../panel/panel.c:557
 msgid "Remove"
-msgstr "Rimuovi"
+msgstr "Elimina"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:777
 msgid "About"
-msgstr ""
+msgstr "Informazioni su"
 
 #. panel section
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:794 ../panel/panel.c:534
-#, fuzzy
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:794
+#: ../panel/panel.c:534
 msgid "Panel"
-msgstr "Pannello Xfce"
+msgstr "Pannello"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:803 ../panel/panel.c:543
-msgid "Manage Panel Items"
-msgstr ""
-
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:831 ../panel/panel.c:584
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:803
+#: ../panel/panel.c:543
 #, fuzzy
+msgid "Manage Panel Items"
+msgstr "Gestisce gli Elementi del Pannello"
+
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:831
+#: ../panel/panel.c:584
 msgid "New Panel"
-msgstr "Pannello Xfce"
+msgstr "Nuovo Pannello"
 
 #. about
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:841 ../panel/panel.c:595
-#, fuzzy
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:841
+#: ../panel/panel.c:595
 msgid "About the Xfce Panel"
-msgstr "Pannello Xfce"
+msgstr "Informazioni sul Pannello di Xfce"
 
-#: ../panel/panel.c:568 ../plugins/actions/actions.c:332
+#: ../panel/panel.c:568
+#: ../plugins/actions/actions.c:332
 msgid "Quit"
-msgstr ""
+msgstr "Esci"
 
 #: ../panel/panel.c:574
-#, fuzzy
 msgid "Restart"
-msgstr "_Riparti"
+msgstr "Riavvia"
 
-#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
-#, fuzzy, c-format
+#: ../panel/panel-item-manager.c:353
+#: ../panel/panel-item-manager.c:361
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr "L'elemento \"%s\" del pannelo non puo essere creato."
+msgstr "Impossibile aprire il modulo \"%s\""
 
 #: ../panel/panel-app.c:180
 msgid "Are you sure you want to exit?"
 msgstr "Sei sicuro di voler uscire?"
 
 #: ../panel/panel-app.c:560
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Pannello Xfce"
+msgstr "Uscire dal Pannello di Xfce?"
 
 #: ../panel/panel-app.c:561
 msgid "You can't remove the last panel. Would you like to exit the program?"
@@ -111,7 +119,7 @@ msgstr ""
 #: ../panel/panel-app.c:581
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "Eliminare il Pannello \"%d\"?"
 
 #: ../panel/panel-app.c:585
 msgid "The selected panel and all its items will be removed."
@@ -119,7 +127,7 @@ msgstr ""
 
 #: ../panel/panel-app.c:618
 msgid "Developer"
-msgstr ""
+msgstr "Sviluppatore"
 
 #: ../panel/main.c:46
 #, fuzzy, c-format
@@ -134,10 +142,10 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-"The Xfce Panel\n"
+"Il Pannello Xfce\n"
 "versione %s\n"
 "\n"
-"Parte di Xfce Desktop Environment\n"
+"Parte dell'Ambiente Desktop Xfce\n"
 "http://www.xfce.org\n"
 "\n"
 "Licensed under the GNU GPL.\n"
@@ -149,6 +157,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+"Uso: %s [OPZIONI]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -167,14 +177,12 @@ msgstr ""
 
 #. floating?
 #: ../panel/panel-settings.c:382
-#, fuzzy
 msgid "Panel Type"
-msgstr "Livello del panello:"
+msgstr "Tipo di Pannello"
 
 #: ../panel/panel-settings.c:391
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Posizione"
+msgstr "Posizione Fissa"
 
 #: ../panel/panel-settings.c:393
 msgid "Freely Moveable"
@@ -187,17 +195,15 @@ msgstr "Posizione"
 
 #: ../panel/panel-settings.c:483
 msgid "_Full Width"
-msgstr ""
+msgstr "Larghezza _Totale"
 
 #: ../panel/panel-settings.c:492
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Nascondimento automatico"
+msgstr "_Nascondimento automatico"
 
 #: ../panel/panel-settings.c:510
-#, fuzzy
 msgid "Orientation:"
-msgstr "Orientamento pannello:"
+msgstr "Orientamento:"
 
 #: ../panel/panel-settings.c:522
 msgid "Horizontal"
@@ -212,22 +218,20 @@ msgid "Handle Style:"
 msgstr ""
 
 #: ../panel/panel-settings.c:545
-#, fuzzy
 msgid "At both sides"
-msgstr "Nascondimento automatico"
+msgstr "Da entrambi i lati"
 
 #: ../panel/panel-settings.c:547
 msgid "At the start"
-msgstr ""
+msgstr "All'inizio"
 
 #: ../panel/panel-settings.c:549
 msgid "At the end"
-msgstr ""
+msgstr "Alla fine"
 
 #: ../panel/panel-settings.c:583
-#, fuzzy
 msgid "Monitor"
-msgstr "Editor"
+msgstr "Monitor"
 
 #. size
 #: ../panel/panel-settings.c:665
@@ -245,58 +249,55 @@ msgstr "Grandi"
 #. transparency
 #: ../panel/panel-settings.c:701
 msgid "Transparency"
-msgstr ""
+msgstr "Trasparenza"
 
 #: ../panel/panel-settings.c:709
 msgid "None"
-msgstr ""
+msgstr "Nessuno"
 
 #: ../panel/panel-settings.c:726
 msgid "Full"
-msgstr ""
+msgstr "Totale"
 
 #: ../panel/panel-settings.c:1056
-msgid ""
-"Drag items from the list to a panel or move existing items to a new location."
+msgid "Drag items from the list to a panel or move existing items to a new location."
 msgstr ""
 
 #: ../panel/panel-settings.c:1074
 msgid "Avalaible Items"
-msgstr ""
+msgstr "Elementi Disponibili"
 
 #: ../panel/panel-settings.c:1087
 msgid "Add To Selected Panel"
-msgstr ""
+msgstr "Aggiungi al Pannello Selezionato"
 
 #: ../panel/panel-settings.c:1291
 msgid "Panel Preferences"
-msgstr ""
+msgstr "Impostazioni del Pannello"
 
 #: ../panel/panel-settings.c:1293
-#, fuzzy
 msgid "Add Items"
-msgstr "Aggiungi un nuovo oggetto"
+msgstr "Aggiungi Elementi"
 
-#: ../plugins/launcher/launcher.c:311 ../plugins/launcher/launcher.c:359
-#, fuzzy, c-format
+#: ../plugins/launcher/launcher.c:311
+#: ../plugins/launcher/launcher.c:359
+#, c-format
 msgid "Could not run \"%s\""
-msgstr "L'elemento \"%s\" del pannelo non puo essere creato."
+msgstr "Impossibile eseguire \"%s\""
 
 #: ../plugins/launcher/launcher.c:557
 #: ../plugins/launcher/launcher-dialog.c:1118
-#, fuzzy
 msgid "New Item"
-msgstr "Aggiungi un nuovo oggetto"
+msgstr "Nuovo Elemento"
 
-#: ../plugins/launcher/launcher.c:613 ../plugins/launcher/launcher.c:1127
-#, fuzzy
+#: ../plugins/launcher/launcher.c:613
+#: ../plugins/launcher/launcher.c:1127
 msgid "This item has not yet been configured"
-msgstr "Questo oggetto non ha opzioni di configurazione"
+msgstr ""
 
 #: ../plugins/launcher/launcher.c:1126
-#, fuzzy
 msgid "New item"
-msgstr "Aggiungi un nuovo oggetto"
+msgstr "Nuovo elemento"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -351,52 +352,44 @@ msgid "Terminal"
 msgstr "Terminale"
 
 #: ../plugins/launcher/launcher-dialog.c:381
-#, fuzzy
 msgid "Select image file"
-msgstr "Seleziona il file"
+msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:426
 msgid "Select command"
 msgstr "Seleziona comando"
 
 #: ../plugins/launcher/launcher-dialog.c:449
-#, fuzzy
 msgid "Name"
-msgstr "Giochi"
+msgstr "Nome"
 
 #: ../plugins/launcher/launcher-dialog.c:467
-#, fuzzy
 msgid "Description"
-msgstr "Posizione"
+msgstr "Descrizione"
 
 #: ../plugins/launcher/launcher-dialog.c:522
 msgid "Other..."
-msgstr ""
+msgstr "Altri..."
 
 #: ../plugins/launcher/launcher-dialog.c:605
-#, fuzzy
 msgid "Command"
-msgstr "Comando:"
+msgstr "Comando"
 
 #: ../plugins/launcher/launcher-dialog.c:641
 msgid "Run in _terminal"
 msgstr "Esegui nel _terminale"
 
 #: ../plugins/launcher/launcher-dialog.c:659
-#, fuzzy
 msgid "Use _startup notification"
 msgstr "Usa _notifica in avvio"
 
 #: ../plugins/launcher/launcher-dialog.c:1223
-msgid ""
-"The first item in the list is shown on the panel. Additional items will "
-"appear in a menu."
+msgid "The first item in the list is shown on the panel. Additional items will appear in a menu."
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:1272
-#, fuzzy
 msgid "Program Launcher"
-msgstr "Aggiungi menu al launcher"
+msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:1598
 msgid "Select file"
@@ -408,63 +401,57 @@ msgid "Separator"
 msgstr "Separatore"
 
 #: ../plugins/separator/separator.c:266
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Separatore"
+msgstr "_Disegna un Separatore"
 
 #: ../plugins/separator/separator.c:275
 msgid "_Expand"
-msgstr ""
+msgstr "_Espandi"
 
 #: ../plugins/actions/actions.c:307
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Impostazioni del Pannello di Xfce"
+msgstr "Azioni del Pannello"
 
 #: ../plugins/actions/actions.c:324
-#, fuzzy
 msgid "Select action type:"
-msgstr "Seleziona un'icona"
+msgstr "Selezioni il tipo di azione:"
 
 #: ../plugins/actions/actions.c:333
-#, fuzzy
 msgid "Lock screen"
-msgstr "/_Blocca schermo"
+msgstr "Blocca lo schermo"
 
 #: ../plugins/actions/actions.c:334
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "/_Blocca schermo"
+msgstr "Esci + Blocca lo schermo"
 
 #: ../plugins/tasklist/tasklist.c:332
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "Processi"
+msgstr "Lista dei Processi"
 
 #: ../plugins/tasklist/tasklist.c:345
-#, fuzzy
 msgid "Show tasks from _all workspaces"
-msgstr "Mostra i processi di tutti gli ambienti di lavoro"
+msgstr "Mostra i processi di _tutti gli ambienti di lavoro"
 
 #: ../plugins/tasklist/tasklist.c:355
 msgid "Show application _names"
-msgstr ""
+msgstr "Mostra i _nomi delle applicazioni"
 
 #: ../plugins/tasklist/tasklist.c:369
 msgid "Never group tasks"
-msgstr ""
+msgstr "Non raggruppare mai i processi"
 
 #: ../plugins/tasklist/tasklist.c:372
 msgid "Automatically group tasks"
-msgstr ""
+msgstr "Raggruppa i processi automaticamente"
 
 #: ../plugins/tasklist/tasklist.c:375
 msgid "Always group tasks"
-msgstr ""
+msgstr "Raggruppa sempre i processi"
 
-#: ../plugins/pager/pager.c:287 ../plugins/pager/pager.desktop.in.in.h:2
+#: ../plugins/pager/pager.c:287
+#: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "Pager"
 
@@ -487,19 +474,18 @@ msgstr "Impossibile registrare la barra di sistema: %s"
 
 #: ../plugins/systray/systray.c:357
 #: ../plugins/systray/systray.desktop.in.in.h:2
-#, fuzzy
 msgid "Status Area"
-msgstr "Sabato"
+msgstr "Area di Stato"
 
-#: ../plugins/systray/systray.c:370 ../plugins/clock/clock.c:442
+#: ../plugins/systray/systray.c:370
+#: ../plugins/clock/clock.c:442
 msgid "Show _frame"
-msgstr ""
+msgstr "Mostra _cornice"
 
 #: ../plugins/iconbox/iconbox.c:760
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
-msgstr "Icona:"
+msgstr ""
 
 #: ../plugins/iconbox/iconbox.c:774
 msgid "Only show minimized applications"
@@ -515,12 +501,12 @@ msgstr ""
 #.
 #: ../plugins/clock/clock.c:109
 msgid "%A %d %B %Y"
-msgstr ""
+msgstr "%A %d %B %Y"
 
-#: ../plugins/clock/clock.c:413 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
+#: ../plugins/clock/clock.c:413
+#: ../plugins/clock/clock.desktop.in.in.h:1
 msgid "Clock"
-msgstr "Blocca"
+msgstr "Orologio"
 
 #: ../plugins/clock/clock.c:420
 msgid "Appearance"
@@ -541,20 +527,19 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:450
 msgid "Clock Options"
-msgstr ""
+msgstr "Opzioni dell'Orologio"
 
 #: ../plugins/clock/clock.c:460
 msgid "Use 24-_hour clock"
 msgstr ""
 
 #: ../plugins/clock/clock.c:468
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "AM/PM"
+msgstr "Mostra AM/PM"
 
 #: ../plugins/clock/clock.c:476
 msgid "Display seconds"
-msgstr ""
+msgstr "Mostra i secondi"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -565,9 +550,8 @@ msgid "Program launcher with optional menu"
 msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Launcher"
+msgstr "Plugin di Test"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
@@ -578,26 +562,24 @@ msgid "Adds a space or a line between panel items"
 msgstr ""
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Blocca lo schermo"
+msgstr ""
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
-msgstr ""
+msgstr "Mostra tutte le applicazioni in esecuzione"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
 msgstr ""
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Area di notifica"
+msgstr "Mostra le icone di notifica"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
-msgstr ""
+msgstr "Mostra le icone di tutte le applicazioni in esecuzione"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
@@ -622,3 +604,4 @@ msgstr ""
 #, fuzzy
 #~ msgid "Preferences"
 #~ msgstr "/_Proprietà ..."
+
