--- a/po/eu.po
+++ b/po/eu.po
@@ -1,32 +1,33 @@
+# translation of eu.po to librezale.org
 # Euskera translations for xfce4-panel package.
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Jon Latorre Martinez <patataman@airtel.net>, 2003.
-# Piarres Beobide Egaña <pi@beobide.net>, 2004.
+# Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.24\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-10-21 20:54+0900\n"
-"PO-Revision-Date: 2005-09-29 20:24+0900\n"
-"Last-Translator: Piarres Beobide Egaña <pi@beobide.net>\n"
-"Language-Team: Euskara <librezale@librezale.org>\n"
+"PO-Revision-Date: 2005-10-24 07:29+0200\n"
+"Last-Translator: Piarres Beobide <pi@beobide.net>\n"
+"Language-Team: librezale.org <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3.1\n"
+"X-Generator: KBabel 1.10.2\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: ../libxfce4panel/xfce-panel-external-item.c:171
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Elementu bat espero gabe ezabatua izan da: \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:581
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "Ezabatu"
+msgstr "\"%s\" Ezabatu?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:586 ../panel/panel-app.c:568
 #: ../panel/panel-app.c:599 ../panel/panel-app.c:632
@@ -36,99 +37,91 @@ msgid "Xfce Panel"
 msgstr "Xfce Panela"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:588
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgid "The item will be removed from the panel and its configuration will be lost."
+msgstr "Elementu hau paneletik ezabatua izango da eta bere konfigurazioa galdu egingo da."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:759
 #, c-format
 msgid "%s Properties"
-msgstr ""
+msgstr "%s Propietateak"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:778
 msgid "About"
-msgstr ""
+msgstr "Honi buruz"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:799
-#, fuzzy
 msgid "Remove"
-msgstr "Ezabatu"
+msgstr "Kendu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:814
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:850
-#, fuzzy
 msgid "Panel"
-msgstr "Xfce Panela"
+msgstr "Panela"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:820 ../panel/panel.c:534
 msgid "Customize Panel"
-msgstr ""
+msgstr "Panela Pertsonalizatu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:837
-#, fuzzy
 msgid "Manage Panels"
-msgstr "Xfce Panela"
+msgstr "Panel Kudeaketa"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:850
-#, fuzzy, c-format
+#, c-format
 msgid "Remove %s"
-msgstr "Ezabatu"
+msgstr "%s Ezabatu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:867
 #: ../panel/panel-settings.c:412
-#, fuzzy
 msgid "New Panel"
-msgstr "Xfce Panela"
+msgstr "Panel Berria"
 
 #: ../panel/panel.c:549 ../plugins/actions/actions.c:332
 msgid "Quit"
-msgstr ""
+msgstr "Irten"
 
 #: ../panel/panel.c:559
-#, fuzzy
 msgid "Restart"
-msgstr "_Desegin"
+msgstr "Berrabiarazi"
 
 #: ../panel/panel.c:573
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Xfce Panela"
+msgstr "Xfce Panela-ri buruz"
 
 #: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr "Ezin da \"%s\" panel elementua sortu."
+msgstr "Ezin da \"%s\" modulua ireki."
 
 #: ../panel/panel-app.c:180
 msgid "Are you sure you want to exit?"
 msgstr "Ziur irten nahi duzula?"
 
 #: ../panel/panel-app.c:570
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Xfce Panela"
+msgstr "Xfce Panela Itxi?"
 
 #: ../panel/panel-app.c:571
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "Ezin duzu azken panela ezabatu. Agian programatik irten nahi duzu?"
 
 #: ../panel/panel-app.c:597
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "\"%d\" Panela Ezabatu?"
 
 #: ../panel/panel-app.c:601
 msgid "The selected panel and all its items will be removed."
-msgstr ""
+msgstr "Aukeratutako panela eta bere elementu guztiak ezabatu egingo dira."
 
 #: ../panel/panel-app.c:640
 msgid "Developer"
-msgstr ""
+msgstr "Garatzailea"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -140,9 +133,9 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Xfce Panela\n"
-"%s bertsioa\n"
-"XFCE-ren mahaigainaren zatia\n"
+" Xfce Panela %s\n"
+"\n"
+"XFCE-ren idazmahai ingurunearen zatia\n"
 "http://www.xfce.org\n"
 "\n"
 " GNU GPL Lizentzipean.\n"
@@ -154,6 +147,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+" Erabilera: %s [AUKERAK]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -169,53 +164,58 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" AUKERAK\n"
+" -h, --help	  Mezu hau bistarazi eta irten\n"
+" -v, --version	  Mezu hau bistarazi eta irten\n"
+" -c, --customize Konfigurazio elkarrizketa bistarazi\n"
+" -s, --save 	  Panel konfigurazioa gorde\n"
+" -r, --restart   Panelak berrabiarazi\n"
+" -q, --quit      Saio amaitu\n"
+" -x, --exit      Panelak itxi\n"
+" -a, --add       Elementu berria gehitu\n"
 
 #: ../panel/panel-settings.c:331 ../panel/panel-settings.c:367
 #: ../panel/panel-settings.c:399
-#, fuzzy, c-format
+#, c-format
 msgid "Panel %d"
-msgstr "Xfce Panela"
+msgstr "%d Panela"
 
 #: ../panel/panel-settings.c:383
-#, fuzzy
 msgid "Select Panel"
-msgstr "Fitxategia aukeratu"
+msgstr "Panela hautatu"
 
 #: ../panel/panel-settings.c:419
-#, fuzzy
 msgid "Remove Panel"
-msgstr "Ezabatu"
+msgstr "Panela Ezabatu"
 
 #: ../panel/panel-settings.c:706 ../panel/panel-settings.c:914
 msgid "Left"
-msgstr ""
+msgstr "Ezkerrean"
 
 #: ../panel/panel-settings.c:708 ../panel/panel-settings.c:916
 msgid "Right"
-msgstr ""
+msgstr "Eskuinean"
 
 #: ../panel/panel-settings.c:713 ../panel/panel-settings.c:921
 msgid "Top"
-msgstr ""
+msgstr "Goian"
 
 #: ../panel/panel-settings.c:715 ../panel/panel-settings.c:923
 msgid "Bottom"
-msgstr ""
+msgstr "Behean"
 
 #. floating?
 #: ../panel/panel-settings.c:747
-#, fuzzy
 msgid "Panel Type"
-msgstr "Panelaren nibela:"
+msgstr "Panel mota:"
 
 #: ../panel/panel-settings.c:756
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Kokalekua"
+msgstr "Kokaleku Finkoa"
 
 #: ../panel/panel-settings.c:758
 msgid "Freely Moveable"
-msgstr ""
+msgstr "Libreki mugigarria"
 
 #. position
 #: ../panel/panel-settings.c:764
@@ -224,17 +224,15 @@ msgstr "Kokalekua"
 
 #: ../panel/panel-settings.c:848
 msgid "_Full Width"
-msgstr ""
+msgstr "_Zabalera osoa"
 
 #: ../panel/panel-settings.c:857
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Automatikoki izkutatu"
+msgstr "Automatikoki _ezkutatu"
 
 #: ../panel/panel-settings.c:875
-#, fuzzy
 msgid "Orientation:"
-msgstr "Panelaren norantza:"
+msgstr "Orientazioa:"
 
 #: ../panel/panel-settings.c:887
 msgid "Horizontal"
@@ -245,24 +243,20 @@ msgid "Vertical"
 msgstr "Bertikala"
 
 #: ../panel/panel-settings.c:898
-#, fuzzy
 msgid "Handle Position:"
-msgstr "Kokalekua"
+msgstr "Kokalekua Kudeatu:"
 
 #: ../panel/panel-settings.c:910
-#, fuzzy
 msgid "At both sides"
-msgstr "Automatikoki izkutatu"
+msgstr "Bi alboetan"
 
 #: ../panel/panel-settings.c:940
-#, fuzzy
 msgid "Panel Properties"
-msgstr "/Configuración del _Panel"
+msgstr "Panelaren propietateak"
 
 #: ../panel/panel-settings.c:975
-#, fuzzy
 msgid "Monitor"
-msgstr "Editorea"
+msgstr "Monitorea"
 
 #. size
 #: ../panel/panel-settings.c:1057
@@ -279,63 +273,61 @@ msgstr "Handia"
 
 #: ../panel/panel-settings.c:1099
 msgid "Transparency"
-msgstr ""
+msgstr "Gardentasuna"
 
 #: ../panel/panel-settings.c:1107
-#, fuzzy
 msgid "None"
-msgstr "Termina_Do"
+msgstr "Bat ere ez"
 
 #: ../panel/panel-settings.c:1124
 msgid "Full"
-msgstr ""
+msgstr "Osoa"
 
 #: ../panel/panel-settings.c:1440
 msgid "Manage Panel Items"
-msgstr ""
+msgstr "Panel Elementuak Kudeatu"
 
 #: ../panel/panel-settings.c:1461
 msgid ""
 "Drag items from the list to a panel or remove them by dragging them back to "
 "the list."
 msgstr ""
+"Eraman elementuak zerrendatik panel batetara edo ezabatzeko elementuak "
+"zerrendara eraman berriz."
 
 #: ../panel/panel-settings.c:1479
 msgid "Avalaible Items"
-msgstr ""
+msgstr "Elementu erabilgarriak"
 
 #: ../panel/panel-settings.c:1492
 msgid "Add To Selected Panel"
-msgstr ""
+msgstr "Hautatutako panelera gehitu"
 
 #: ../panel/panel-settings.c:1651
 msgid "Panel Preferences"
-msgstr ""
+msgstr "Panel Hobespenak"
 
 #: ../panel/panel-settings.c:1653
 msgid "Customize Panels"
-msgstr ""
+msgstr "Panelak Pertsonalizatu"
 
 #: ../plugins/launcher/launcher.c:311 ../plugins/launcher/launcher.c:359
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr "Ezin da \"%s\" panel elementua sortu."
+msgstr "Ezin da \"%s\" abiarazi."
 
 #: ../plugins/launcher/launcher.c:557
 #: ../plugins/launcher/launcher-dialog.c:1118
-#, fuzzy
 msgid "New Item"
-msgstr "Elementu berria gehitu"
+msgstr "Elementu berria"
 
 #: ../plugins/launcher/launcher.c:613 ../plugins/launcher/launcher.c:1127
-#, fuzzy
 msgid "This item has not yet been configured"
-msgstr "Elementu honek ez ditu ezarpen aukerak"
+msgstr "Elementu hau ez da konfigruatua izan"
 
 #: ../plugins/launcher/launcher.c:1126
-#, fuzzy
 msgid "New item"
-msgstr "Elementu berria gehitu"
+msgstr "Elementu berria"
 
 #: ../plugins/launcher/launcher-dialog.c:78
 msgid "Default"
@@ -390,47 +382,44 @@ msgid "Terminal"
 msgstr "Terminala"
 
 #: ../plugins/launcher/launcher-dialog.c:381
-#, fuzzy
 msgid "Select image file"
-msgstr "Fitxategia aukeratu"
+msgstr "Irudi fitxategia aukeratu"
 
 #: ../plugins/launcher/launcher-dialog.c:426
 msgid "Select command"
-msgstr "Aukeratu komandoa"
+msgstr "Komandoa hautatu"
 
 #: ../plugins/launcher/launcher-dialog.c:449
-#, fuzzy
 msgid "Name"
-msgstr "Jokoak"
+msgstr "Izena"
 
 #: ../plugins/launcher/launcher-dialog.c:467
-#, fuzzy
 msgid "Description"
-msgstr "Kokalekua"
+msgstr "Azalpena"
 
 #: ../plugins/launcher/launcher-dialog.c:522
 msgid "Other..."
-msgstr ""
+msgstr "Besterik..."
 
 #: ../plugins/launcher/launcher-dialog.c:605
-#, fuzzy
 msgid "Command"
-msgstr "Komandoa:"
+msgstr "Komandoa"
 
 #: ../plugins/launcher/launcher-dialog.c:641
 msgid "Run in _terminal"
 msgstr "_terminalean exekutatu"
 
 #: ../plugins/launcher/launcher-dialog.c:659
-#, fuzzy
 msgid "Use _startup notification"
-msgstr "Erabili notifikazioak"
+msgstr "Erabili _hasiera notifikazioak"
 
 #: ../plugins/launcher/launcher-dialog.c:1230
 msgid ""
 "The first item in the list is shown on the panel. Additional items will "
 "appear in a menu."
 msgstr ""
+"Zerrendako lehenengo elementua panelean bistaraziko da. Hurrengoak "
+"menu batetan agertu beharko lirateke."
 
 #: ../plugins/launcher/launcher-dialog.c:1270
 #: ../plugins/separator/separator.c:241 ../plugins/actions/actions.c:295
@@ -438,10 +427,9 @@ msgstr ""
 #: ../plugins/systray/systray.c:345 ../plugins/iconbox/iconbox.c:748
 #: ../plugins/clock/clock.c:401
 msgid "Properties"
-msgstr ""
+msgstr "Propietateak"
 
 #: ../plugins/launcher/launcher-dialog.c:1279
-#, fuzzy
 msgid "Program Launcher"
 msgstr "Abiarazleari menua gehitu"
 
@@ -455,40 +443,34 @@ msgid "Separator"
 msgstr "Bereizlea"
 
 #: ../plugins/separator/separator.c:266
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Bereizlea"
+msgstr "Bereizlea _Ipini"
 
 #: ../plugins/separator/separator.c:275
 msgid "_Expand"
-msgstr ""
+msgstr "_Zabaldu"
 
 #: ../plugins/actions/actions.c:307
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Panel Actions"
-msgstr "/Configuración del _Panel"
+msgstr "Panel Ekintzak"
 
 #: ../plugins/actions/actions.c:324
-#, fuzzy
 msgid "Select action type:"
-msgstr "Ikonoa aukeratu"
+msgstr "Ekintza mota hautatu:"
 
 #: ../plugins/actions/actions.c:333
-#, fuzzy
 msgid "Lock screen"
-msgstr "_PantaiLa blokeatu"
+msgstr "Pantaila blokeatu"
 
 #: ../plugins/actions/actions.c:334
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "_PantaiLa blokeatu"
+msgstr "PantaiLa blokeatu + Itxi"
 
 #: ../plugins/tasklist/tasklist.c:332
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "Lanak"
+msgstr "Zeregin zerrenda"
 
 #: ../plugins/tasklist/tasklist.c:345
 msgid "Show tasks from _all workspaces"
@@ -499,17 +481,14 @@ msgid "Show application _names"
 msgstr "Bistarazi aplikazio _izenak"
 
 #: ../plugins/tasklist/tasklist.c:369
-#, fuzzy
 msgid "Never group tasks"
-msgstr "Beti _taldekatu lanak"
+msgstr "Inoiz ez taldekatu lanak"
 
 #: ../plugins/tasklist/tasklist.c:372
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "Beti _taldekatu lanak"
+msgstr "Automatikoki taldekatu lanak"
 
 #: ../plugins/tasklist/tasklist.c:375
-#, fuzzy
 msgid "Always group tasks"
 msgstr "Beti _taldekatu lanak"
 
@@ -536,24 +515,21 @@ msgstr "Ezinezkoa ikono bandeja erregistratzea: %s"
 
 #: ../plugins/systray/systray.c:357
 #: ../plugins/systray/systray.desktop.in.in.h:2
-#, fuzzy
 msgid "Status Area"
-msgstr "Larunbata"
+msgstr "Egoera eremua"
 
 #: ../plugins/systray/systray.c:370 ../plugins/clock/clock.c:442
 msgid "Show _frame"
-msgstr ""
+msgstr "_Markoa Bistarazi"
 
 #: ../plugins/iconbox/iconbox.c:760
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
-msgstr "Ikonoa:"
+msgstr "Ikono Kutxa"
 
 #: ../plugins/iconbox/iconbox.c:774
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "Bistarazi aplikazio _izenak"
+msgstr "Bakarrik txikituriko aplikazioak bistarazi"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -564,14 +540,12 @@ msgstr "Bistarazi aplikazio _izenak"
 #. * %Y  : four digit year
 #.
 #: ../plugins/clock/clock.c:109
-#, fuzzy
 msgid "%A %d %B %Y"
 msgstr "%A, %Y %B %d"
 
 #: ../plugins/clock/clock.c:413 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "Blokeatu"
+msgstr "Ordularia"
 
 #: ../plugins/clock/clock.c:420
 msgid "Appearance"
@@ -592,20 +566,19 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:450
 msgid "Clock Options"
-msgstr ""
+msgstr "Ordulari Aukerak"
 
 #: ../plugins/clock/clock.c:460
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "24 _orduko ordularia erabili"
 
 #: ../plugins/clock/clock.c:468
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "AM/PM"
+msgstr "AM/PM bistarazi"
 
 #: ../plugins/clock/clock.c:476
 msgid "Display seconds"
-msgstr ""
+msgstr "Segunduak bistarazi"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -613,45 +586,41 @@ msgstr "Abiarazlea"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Programa abiarazlea aukerako menu batez"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Abiarazlea"
+msgstr "Proba Plugina"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Plugin honek ez du zereginik"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Panel elementuen artean lekua edo lerro bat gehitu"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Pantaila blokeatu"
+msgstr "Pantaila blokeatu edo saioa itxi"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "Bistarazi aplikazio _izenak"
+msgstr "Bistarazi abiarazirik dauden aplikazio guztiak"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Idazmahai birtualen ikuspegi txikitua"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Bistarazi aplikazio _izenak"
+msgstr "Bistarazi notifikazio ikonoak"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "Bistarazi aplikazio _izenak"
+msgstr "Bistarazi abiarazirik dauden aplikazio guztien ikonoak"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "Zein ordu da?"
+
